--- a/src/common/Modal/styles.module.scss
+++ b/src/common/Modal/styles.module.scss
@@ -16,7 +16,7 @@
   bottom: 0;
   left: 0;
   overflow: auto;
-  padding: 20px;
+  padding: 20px 0;
   position: absolute;
   right: 0;
   top: 0;
